# eselect-lib-bin-symlink

./: .gitignore  Makefile.am  configure.ac
libs/: bin-symlink.bash.in
